# GFCC

./: .a.swp  .gitignore  1_tmp.csv  CMakeLists.txt  README.md  a.csv  aa.c  abc  out.csv  r.csv  runme.sh  rwit  tmp  tmp.a3c  tmp.f  todo.md
old_tests/: 1.c  2.c  4.c  6.c  demo_test14.c  file_io.c  global.c  graph.c  opr.c  pointer.c  relop.c  struct.c  test_BO.c  test_abs_decl.c  test_general.c  test_struct.c
src/: asm.cpp  b  b.dot  b.ps  c  c.dot  c.ps  codegen.cpp  codegen2.cpp  codegen_utils.cpp  consts.c  consts.cpp  d  irTest_1.txt  irTest_2.txt  ircodes.cpp  lex.yy.c  lexer  lexer.l  lib_math_test.c  libdump.cpp  main.c  main.cpp  meta.c  meta.cpp  o  ops.cpp  out  out.csv  parser.tab.c  parser.tab.h  parser.y  symtab.cpp  test.c  tree.c  tree.cpp  types.cpp  types2.cpp  typo.cpp  y.tab.c
src/include/: asm.h  codegen.h  cs50_printf.asm  g5_printf.asm  gfcc_colors.h  gfcc_lexer.h  gfcc_math.c  gfcc_meta.h  gfcc_meta.h.in  gfcc_printf.h  gfcc_tree.h  gfcc_typo.h  ircodes.h  libdump.h  ops.h  symtab.h  types.h  types2.h  typo.h  y.tab.h
src/lib/: g5_math.asm  g5_math.h  g5_std.asm  g5_std.h  g5_string.asm  g5_string.h  g5_typo.asm  g5_typo.h  gfcc_math.h  gfcc_std.h  gfcc_typo.h
src/lib/old/: gfcc_math.c  types.cpp
tests/: 1.c  3.c  4.c  5.c  6.c  abst_decl.c  add.c  array.c  complex.c  demo_output.out  demo_test1.c  demo_test11.c  demo_test12.c  demo_test13.c  demo_test2.c  demo_test3.c  demo_test4.c  demo_test5.c  demo_test6.c  demo_test7.c  demo_test8.c  demo_test9.c  extraOps.c  file_io.c  global.c  log_op.c  log_op.csv  new.c  new.csv  new2.c  new2.csv  new3.c  new3.csv  pointer.c  relop.c  relop.csv  stdlib.c  string.c  struct.c  struct2.c  (+22 more)
tests/final tests/: test_BO.c  test_general.c
tests/final_tests/: test9_struct.c  test_fancy_for.c  test_file.c  test_func_def.c
tests/praskr/: test_exprstmt.c  test_if_else.c  test_return.c
